" and added pdf-maker

--- a/src/mycv/html/index.html
+++ b/src/mycv/html/index.html
@@ -35,6 +35,8 @@
               </li>
             </ul>
           </div>
+          
+          <a href="JamesShaneCV.pdf" class="btn btn-danger download-template" role="button" aria-disabled="true">Download</a>
       </div>
     </nav>
     <main class="page cv-page">
