--- a/src/mycv/html/index.html
+++ b/src/mycv/html/index.html
@@ -7,13 +7,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style2.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/stylecv.css">
   </head>
   <body>
    <nav class="navbar fixed-top navbar-expand-lg navbar-dark page-navbar gradient">
       <div class="container">
-        <a class="navbar-brand logo" href="#">My CV</a>
+        <a class="navbar-brand logo" href="#top">James' CV</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -39,7 +38,7 @@
           <a href="JamesShaneCV.pdf" class="btn btn-danger download-template" role="button" aria-disabled="true">Download</a>
       </div>
     </nav>
-    <main class="page cv-page">
+    <main class="page cv-page" id="top">
       <section class="cv-block block-intro border-bottom">
         <div class="container">
           <div class="avatar">
