--- a/src/mycv/html/index.html
+++ b/src/mycv/html/index.html
@@ -23,6 +23,9 @@
                   <a class="nav-link" href="#work-experience">Work Experience</a>
                 </li>
                 <li class="nav-item item">
+                    <a class="nav-link" href="#freelance">Freelance</a>
+                </li>
+                <li class="nav-item item">
                     <a class="nav-link" href="#education">Education</a>
                 </li>
                 <li class="nav-item item">
@@ -45,7 +48,7 @@
             <img class="img-fluid rounded-circle" src="img/avatar.jpg">
           </div>
           <p>Hello! I am <strong>James Shane</strong>. I work as a full stack developer. I have passion for clean, minimal and easy to use interfaces. Striving for proper database design and integrity.</p>
-          <!-- <a href="#" class="btn btn-outline-primary">Hire Me</a> -->
+          <a href="#" class="btn btn-outline-primary">Hire Me</a>
         </div>
       </section>
       <section class="cv-block info">
@@ -72,6 +75,33 @@
                 </div>
                 <div class="col-md-6">
                   <time class="period">2018-Present</time>
+                </div>
+              </div>
+              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
+            </div>
+          </div>
+          <div class="education group" id="freelance">
+            <h2 class="text-center">Freelance</h2>
+            <div class="item">
+              <div class="row">
+                <div class="col-md-6">
+                  <h3>High School</h3>
+                  <h4 class="organization">Albert Einstein School</h4>
+                </div>
+                <div class="col-md-6">
+                  <time class="period">09/2005 - 05/2010</time>
+                </div>
+              </div>
+              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
+            </div>
+            <div class="item">
+              <div class="row">
+                <div class="col-md-6">
+                  <h3>Applied Physics</h3>
+                  <h4 class="organization">Stephen Hawking College</h4>
+                </div>
+                <div class="col-md-6">
+                  <time class="period">09/2010 - 06/2015</time>
                 </div>
               </div>
               <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
@@ -127,25 +157,31 @@
                     aria-valuemin="0" aria-valuemax="100" style="width:80%">
                     </div>
                   </div>
+                  <h3>SCSS (SASS 3)</h3>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="70"
+                    aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="contact-info info-card">
                   <h2>Contact Info</h2>
-                  <div class="row">
+                  <!-- <div class="row">
                     <div class="col-1">
                       <i class="ion-android-calendar icon"></i>
                     </div>
                     <div class="col-9">
                       <span>10/10/1990</span>
                     </div>
-                  </div>
+                  </div> -->
                   <div class="row">
                     <div class="col-1">
                         <i class="ion-person icon"></i>
                     </div>
                     <div class="col-9">
-                      <span>John Smith</span>
+                      <span>James Shane</span>
                     </div>
                   </div>
                   <div class="row">
@@ -153,7 +189,7 @@
                       <i class="ion-ios-telephone icon"></i>
                     </div>
                     <div class="col-9">
-                      <span>+235 3217 424</span>
+                      <span>+1 303.961-4448</span>
                     </div>
                   </div>
                   <div class="row">
@@ -161,7 +197,7 @@
                       <i class="ion-at icon"></i>
                     </div>
                     <div class="col-9">
-                      <span>lorem@email.com</span>
+                      <span>jamesshane@gmail.com</span>
                     </div>
                   </div>
                 </div>
