working on sendgrid form

--- a/src/mycv/html/index.html
+++ b/src/mycv/html/index.html
@@ -48,7 +48,7 @@
             <img class="img-fluid rounded-circle" src="img/avatar.jpg">
           </div>
           <p>Hello! I am <strong>James Shane</strong>. I work as a full stack developer. I have passion for clean, minimal and easy to use interfaces. Striving for proper database design and integrity.</p>
-          <a href="#" class="btn btn-outline-primary">Hire Me</a>
+          <a href="emailform.html" class="btn btn-outline-primary">Hire Me</a>
         </div>
       </section>
       <section class="cv-block info">
