--- a/src/mycv/html/emailform.html
+++ b/src/mycv/html/emailform.html
@@ -1,14 +1,85 @@
 <!DOCTYPE html>
 <html>
-  <head>
-      </head>
-      <body>
-          <form id="loginformA" action="/test-page" method="post">
-    <div>
-        <label for="email">Email: </label>
-        <input type="text" id="email" name="email"></input>
-    </div>
-<input type="submit" value="Submit"></input>
-</form>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>James Shane - CV</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/stylecv.css">
+</head>
+
+<body>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark page-navbar gradient">
+        <div class="container">
+            <a class="navbar-brand logo" href="/">James' CV</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item item">
+                        <a class="nav-link" href="#top">Email Me</a>
+                    </li>
+                </ul>
+            </div>
+            <a href="JamesShaneCV.pdf" class="btn btn-danger download-template" role="button"
+                aria-disabled="true">Download CV</a>
+        </div>
+    </nav>
+    <main class="page cv-page" id="top">
+        <section class="cv-block info">
+            <div class="container">
+                <div class="work-experience group" id="work-experience">
+                    <h2 class="text-center">Email Me</h2>
+                    <div class="item">
+                        <div class="row">
+                            <div class="col-lg-5 mx-auto">
+                                <p id="bigerror" class="alert alert-danger">The was an error.</p>
+                                <form id="form"  onsubmit="return false;" novalidate>
+
+                                    <input type="text" id="name" class="form-control" placeholder="Your Name"
+                                        name="name"></input>
+                                        <div id="valemail" class="text-danger"></div>
+                                    <br />
+
+                                    <input type="text" id="email" class="form-control" placeholder="Your Email"
+                                        name="email"></input>
+                                        <div id="valemail" class="text-danger"></div>
+                                    <br />
+                                    <textarea id="mesg" class="form-control" rows="8" placeholder="Message To Me"
+                                        name="mesg"></textarea>
+                                        <div id="valemail" class="text-danger"></div>
+                                    <br />
+                                    <br />
+                                    <input type="submit" class="btn btn-outline-primary" value="Submit"></input>
+
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="page-footer">
+        <div class="container">
+            <div class="social-icons">
+                <a href="#"><i class="ion-social-facebook" title="Facebook"></i></a>
+                <a href="#"><i class="ion-social-instagram-outline" title="Instagram"></i></a>
+                <a href="#"><i class="ion-social-twitter" title="Twitter"></i></a>
+            </div>
+        </div>
+    </footer>
+    </main>
 </body>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="js/script.js"></script>
+<script src="js/classes.js"></script>
+
 </html>
