--- a/src/mycv/html/index.html
+++ b/src/mycv/html/index.html
@@ -38,7 +38,7 @@
             </ul>
           </div>
           
-          <a href="JamesShaneCV.pdf" class="btn btn-danger download-template" role="button" aria-disabled="true">Download</a>
+          <a href="JamesShaneCV.pdf" class="btn btn-danger download-template" role="button" aria-disabled="true">Download CV</a>
       </div>
     </nav>
     <main class="page cv-page" id="top">
