--- a/src/mycv/html/index.html
+++ b/src/mycv/html/index.html
@@ -54,7 +54,19 @@
       <section class="cv-block info">
         <div class="container">
           <div class="work-experience group" id="work-experience">
-            <h2 class="text-center">Work Experience</h2>    
+            <h2 class="text-center">Work Experience</h2> 
+            <div class="item">
+              <div class="row">
+                <div class="col-md-6">
+                  <h3>Database Administrator - Custom Software Developer</h3>
+                  <h4 class="organization">Metropolitan State University of Denver</h4>
+                </div>
+                <div class="col-md-6">
+                  <time class="period">1999 - 2003</time>
+                </div>
+              </div>
+              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
+            </div>    
             <div class="item">
               <div class="row">
                 <div class="col-md-6">
@@ -74,22 +86,22 @@
                   <h4 class="organization">Freelance.</h4>
                 </div>
                 <div class="col-md-6">
-                  <time class="period">2018-Present</time>
+                  <time class="period">2015 - Present</time>
                 </div>
               </div>
               <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
             </div>
           </div>
-          <div class="education group" id="freelance">
+          <div class="freelance group" id="freelance">
             <h2 class="text-center">Freelance</h2>
             <div class="item">
               <div class="row">
                 <div class="col-md-6">
-                  <h3>High School</h3>
-                  <h4 class="organization">Albert Einstein School</h4>
+                  <h3>WordPress Developer</h3>
+                  <h4 class="organization">Acclaro Design</h4>
                 </div>
                 <div class="col-md-6">
-                  <time class="period">09/2005 - 05/2010</time>
+                  <time class="period">05/2015 - 12/2015</time>
                 </div>
               </div>
               <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
@@ -97,11 +109,35 @@
             <div class="item">
               <div class="row">
                 <div class="col-md-6">
-                  <h3>Applied Physics</h3>
-                  <h4 class="organization">Stephen Hawking College</h4>
+                  <h3>Executive Producer</h3>
+                  <h4 class="organization">Amy On The Radio</h4>
                 </div>
                 <div class="col-md-6">
-                  <time class="period">09/2010 - 06/2015</time>
+                  <time class="period">06/2016 - Present</time>
+                </div>
+              </div>
+              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
+            </div>
+            <div class="item">
+              <div class="row">
+                <div class="col-md-6">
+                  <h3>CTO - Consultant</h3>
+                  <h4 class="organization">Borealis Media Group</h4>
+                </div>
+                <div class="col-md-6">
+                  <time class="period">09/2017 - Present</time>
+                </div>
+              </div>
+              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
+            </div>
+            <div class="item">
+              <div class="row">
+                <div class="col-md-6">
+                  <h3>.NET Developer - Full Stack Developer</h3>
+                  <h4 class="organization">Soura Tech</h4>
+                </div>
+                <div class="col-md-6">
+                  <time class="period">11/2018 - Present</time>
                 </div>
               </div>
               <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
@@ -112,23 +148,11 @@
             <div class="item">
               <div class="row">
                 <div class="col-md-6">
-                  <h3>High School</h3>
-                  <h4 class="organization">Albert Einstein School</h4>
+                  <h3>Bachelor of Science</h3>
+                  <h4 class="organization">Metropolitan State University of Denver</h4>
                 </div>
                 <div class="col-md-6">
-                  <time class="period">09/2005 - 05/2010</time>
-                </div>
-              </div>
-              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
-            </div>
-            <div class="item">
-              <div class="row">
-                <div class="col-md-6">
-                  <h3>Applied Physics</h3>
-                  <h4 class="organization">Stephen Hawking College</h4>
-                </div>
-                <div class="col-md-6">
-                  <time class="period">09/2010 - 06/2015</time>
+                  <time class="period">Graduation 2002</time>
                 </div>
               </div>
               <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
