added KB description

--- a/src/mycv/html/index.html
+++ b/src/mycv/html/index.html
@@ -77,7 +77,8 @@
                   <time class="period">2003-2018</time>
                 </div>
               </div>
-              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
+              <p class="text-muted">Starting out as a Customer Support Agent and Jr. Developer, I quickly became the Lead Developer after the head developer moved to a new job, shortly after my hire. The first three years I was the sole developer until the company grew in size. Continuing the next ten years I held the Lead Develper title as other developers came and went, managing up to four individuals and a few projects as project coordinator. The last two years the company reconfigured making me the Lead Database Administrator for all projects. Throghout my 15 years I always held responsibilities in deciding company wide technologies, customer support lead and backup IT Manager when IT Manager was away.</p>
+              <p id="languages">.NET, Microsoft SQL Server, C#, Javascript, Flash AS 2/3, CSS, HTML, iOS (Objective C), Android (Java)</p>
             </div>   
             <div class="item">
               <div class="row">
