--- a/src/mycv/html/index.html
+++ b/src/mycv/html/index.html
@@ -31,9 +31,9 @@
                 <li class="nav-item item">
                   <a class="nav-link" href="#skills">Skills</a>
                 </li>
-                <li class="nav-item item">
+                <!-- <li class="nav-item item">
                     <a class="nav-link" href="#hobbies">Hobbies</a>
-                </li>
+                </li> -->
               </li>
             </ul>
           </div>
@@ -62,10 +62,11 @@
                   <h4 class="organization">Metropolitan State University of Denver</h4>
                 </div>
                 <div class="col-md-6">
-                  <time class="period">1999 - 2003</time>
+                  <time class="period">08/1999 - 06/2003</time>
                 </div>
               </div>
-              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
+              <p class="text-muted">Starting out as a work study position, I soon became one of three system DBAs managing the master student database holding personal, class and grade data for the whole university. During my stint I was lead developer for the helpdesk software that helped the university campus track and resolve tech issues and computer repair/deployment for professors and administrative staff. Along with maintaining the off-the-shelf CRM software, I built custom tools to work along-side the CRM to handle tracking of computer repair and deployment of new computers for customer relation staff.</p>
+              <p id="technology" class="text-muted">Oracle Products &LessFullEqual; 8g, PERL, PHP, SQL, Unix, Linux, HTML, Microsoft Access, VB, Objective-C</p>
             </div>    
             <div class="item">
               <div class="row">
@@ -74,11 +75,11 @@
                   <h4 class="organization">Klein Buendel, Inc.</h4>
                 </div>
                 <div class="col-md-6">
-                  <time class="period">2003-2018</time>
+                  <time class="period">11/2003 - 11/2018</time>
                 </div>
               </div>
-              <p class="text-muted">Starting out as a Customer Support Agent and Jr. Developer, I quickly became the Lead Developer after the head developer moved to a new job, shortly after my hire. The first three years I was the sole developer until the company grew in size. Continuing the next ten years I held the Lead Develper title as other developers came and went, managing up to four individuals and a few projects as project coordinator. The last two years the company reconfigured making me the Lead Database Administrator for all projects. Throghout my 15 years I always held responsibilities in deciding company wide technologies, customer support lead and backup IT Manager when IT Manager was away.</p>
-              <p id="languages">.NET, Microsoft SQL Server, C#, Javascript, Flash AS 2/3, CSS, HTML, iOS (Objective C), Android (Java)</p>
+              <p class="text-muted">Starting out as a Customer Support Agent and Jr. Developer, I quickly became the Lead Developer after the head developer moved to a new job, shortly after my hire. The first three years I was the sole developer before the company expanded. Continuing the next 10 years, I held the Lead Developer title as other developers came and went, managing up to four individuals and a few projects as project coordinator. The last two years the company reconfigured making me the Lead Database Administrator for all projects. Throughout my 15 years I always held responsibilities in deciding company-wide technologies, customer support lead and backup IT Manager when IT Manager was away.</p>
+              <p id="technology" class="text-muted">.NET, Microsoft SQL Server, C#, Javascript, Flash AS 2/3, CSS, HTML, iOS (Objective C), Android (Java)</p>
             </div>   
             <div class="item">
               <div class="row">
@@ -87,10 +88,10 @@
                   <h4 class="organization">Freelance.</h4>
                 </div>
                 <div class="col-md-6">
-                  <time class="period">2015 - Present</time>
+                  <time class="period">06/2010 - Present</time>
                 </div>
               </div>
-              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
+              <p class="text-muted">Freelance work has always called upon my skills. During my career I've performed a wide range of freelance jobs varying in project and team size. Please refer to the Freelance section for more detail.</p>
             </div>
           </div>
           <div class="freelance group" id="freelance">
@@ -105,19 +106,21 @@
                   <time class="period">05/2015 - 12/2015</time>
                 </div>
               </div>
-              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
+              <p class="text-muted">I was hired to develop (Running Denver) <a href="https://runningdenver.com/">https://runningdenver.com/</a> by adding a race information platform including event info, registration and map integration. This included WordPress code and style modification as well as incorporating plugins both off-the-self and custom.</p>
+              <p id="technology" class="text-muted">PHP, HTML, CSS, WordPress, MySQL</p>
             </div>
             <div class="item">
               <div class="row">
                 <div class="col-md-6">
-                  <h3>Executive Producer</h3>
-                  <h4 class="organization">Amy On The Radio</h4>
+                  <h3>Developer</h3>
+                  <h4 class="organization">Laradon</h4>
                 </div>
                 <div class="col-md-6">
-                  <time class="period">06/2016 - Present</time>
+                  <time class="period">06/2010 - 08/2015</time>
                 </div>
               </div>
-              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
+              <p class="text-muted">Over the five years I developed two major projects. An internal shopping cart for Laradon staff to request supplies from the asset department. This involved creating a configurable library to add, delete and modify stock. Order tracking and internet alert system for both requester and provider. As well as, tracking which account from each department to apply cost of asset provision. The second project was to create a full registration for the <em>Right to Work</em> project for disabled individuals looking for work provided by Laradon job leads. This involved securely collecting private information and developing a safe alert/communication system for both the client and employer.</p>
+              <p id="technology" class="text-muted">.NET, C#, CSS, Microsoft SQL Server</p>
             </div>
             <div class="item">
               <div class="row">
@@ -129,7 +132,8 @@
                   <time class="period">09/2017 - Present</time>
                 </div>
               </div>
-              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
+              <p class="text-muted">I'm working as a CTO/Consultant for Borealis Media Group (BMG) in assisting the CEO on developing radio broadcasting technology. I maintain the cloud-based server system as well as the PHP websites while providing constant solutions for Linux based servers, email configurations and anything to keep production of more than two live broadcasting clients running on a daily/weekly basis.</p>
+              <p id="technology" class="text-muted">Google Cloud, Ubuntu, PHP, HTML, CSS, WordPress, MySQL, Telephony</p>
             </div>
             <div class="item">
               <div class="row">
@@ -141,7 +145,8 @@
                   <time class="period">11/2018 - Present</time>
                 </div>
               </div>
-              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
+              <p class="text-muted">Soura Tech works with oil pipeline companies in the Oklahoma region. My first project was developing a website to track errors in pipelines and handle repairs of the pipelines. Currently, I'm working on a general website for a client with a management system for classes dealing with pipeline field education. This website will manage classes and student registration.</p>
+              <p id="technology" class="text-muted">.NET, MVC, Microsoft SQL Server, C#, Javascript, TypeScript, Nodejs, CSS, BootStrap, HTML</p>
             </div>
           </div>
           <div class="education group" id="education">
@@ -156,7 +161,12 @@
                   <time class="period">Graduation 2002</time>
                 </div>
               </div>
-              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
+              <p class="text-muted">Major: Computer Science</p>
+              <p class="text-muted">Minor: Mathematics</p>
+              <p class="text-muted">GPA: 3.8</p>
+              <p class="text-muted">President’s Honor Role<br />
+                Degree plan focused on software engineering in team
+                situations.</p>
             </div>
           </div>
           <div class="group" id="skills">
@@ -190,6 +200,7 @@
                   </div>
                 </div>
               </div>
+
               <div class="col-md-6">
                 <div class="contact-info info-card">
                   <h2>Contact Info</h2>
@@ -227,20 +238,22 @@
                   </div>
                 </div>
               </div>
+
+              
             </div>
           </div>
-          <div class="hobbies group" id="hobbies">
+          <!-- <div class="hobbies group" id="hobbies">
             <h2 class="text-center">Hobbies</h2>
             <p class="text-center text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras risus ligula, iaculis ut metus sit amet, luctus pharetra mauris. Aliquam purus felis, pretium vel pretium vitae, dapibus sodales ante. Suspendisse potenti. Duis nunc eros.</p>
-          </div>
+          </div> -->
         </div>
       </section>
       <footer class="page-footer">
         <div class="container">
           <div class="social-icons">
-            <a href="#"><i class="ion-social-facebook" title="Facebook"></i></a>
-            <a href="#"><i class="ion-social-instagram-outline" title="Instagram"></i></a>
-            <a href="#"><i class="ion-social-twitter" title="Twitter"></i></a>
+            <a href="https://www.facebook.com/jamesshane"><i class="ion-social-facebook" title="Facebook"></i></a>
+            <a href="https://www.instagram.com/jamesshane"><i class="ion-social-instagram-outline" title="Instagram"></i></a>
+            <a href="https://twitter.com/jamesshane"><i class="ion-social-twitter" title="Twitter"></i></a>
           </div>
         </div>
       </footer>
