added publications, little more clean up

--- a/src/mycv/html/emailform.html
+++ b/src/mycv/html/emailform.html
@@ -55,9 +55,9 @@
                                         name="mesg"></textarea>
                                         <div id="valmesg" class="text-danger"></div>
                                     <br />
-                                    <div class="form-group-lg">
+                                    <div class="form-group-lg block-end">
                                         <div class="float-left">
-                                            <input type="submit" id="submitcontact" class="btn btn-outline-primary btn-lg" value="Register" />
+                                            <input type="submit" id="submitcontact" class="btn btn-outline-primary btn-lg" value="Email Me" />
                                         </div>
                                         <div class="float-right">
                                             <input type="reset" id="clear" class="btn btn-outline-primary btn-lg" value="Clear" />
@@ -75,9 +75,9 @@
     <footer class="page-footer">
         <div class="container">
             <div class="social-icons">
-                <a href="#"><i class="ion-social-facebook" title="Facebook"></i></a>
-                <a href="#"><i class="ion-social-instagram-outline" title="Instagram"></i></a>
-                <a href="#"><i class="ion-social-twitter" title="Twitter"></i></a>
+              <a href="https://www.facebook.com/jamesshane"><i class="ion-social-facebook" title="Facebook"></i></a>
+              <a href="https://www.instagram.com/jamesshane"><i class="ion-social-instagram-outline" title="Instagram"></i></a>
+              <a href="https://twitter.com/jamesshane"><i class="ion-social-twitter" title="Twitter"></i></a>
             </div>
         </div>
     </footer>
