added _new to links

--- a/src/mycv/html/emailform.html
+++ b/src/mycv/html/emailform.html
@@ -26,8 +26,8 @@
                     </li>
                 </ul>
             </div>
-            <a href="JamesShaneCV.pdf" class="btn btn-danger download-template" role="button"
-                aria-disabled="true">Download CV</a>
+            <a target="_new" href="JamesShaneCV.pdf" class="btn btn-danger download-template" role="button" aria-disabled="true">Download
+              CV</a>
         </div>
     </nav>
     <main class="page cv-page" id="top">
@@ -75,9 +75,9 @@
     <footer class="page-footer">
         <div class="container">
             <div class="social-icons">
-              <a href="https://www.facebook.com/jamesshane"><i class="ion-social-facebook" title="Facebook"></i></a>
-              <a href="https://www.instagram.com/jamesshane"><i class="ion-social-instagram-outline" title="Instagram"></i></a>
-              <a href="https://twitter.com/jamesshane"><i class="ion-social-twitter" title="Twitter"></i></a>
+              <a target="_new" href="https://www.facebook.com/jamesshane"><i class="ion-social-facebook" title="Facebook"></i></a>
+              <a target="_new" href="https://www.instagram.com/jamesshane"><i class="ion-social-instagram-outline" title="Instagram"></i></a>
+              <a target="_new" href="https://twitter.com/jamesshane"><i class="ion-social-twitter" title="Twitter"></i></a>
             </div>
         </div>
     </footer>
