--- a/src/mycv/html/index.html
+++ b/src/mycv/html/index.html
@@ -47,7 +47,7 @@
         </ul>
       </div>
 
-      <a href="JamesShaneCV.pdf" class="btn btn-danger download-template" role="button" aria-disabled="true">Download
+      <a target="_new" href="JamesShaneCV.pdf" class="btn btn-danger download-template" role="button" aria-disabled="true">Download
         CV</a>
     </div>
   </nav>
@@ -135,7 +135,7 @@
               </div>
             </div>
             <p class="text-muted">I was hired to develop (Running Denver) <a
-                href="https://runningdenver.com/">https://runningdenver.com/</a> by adding a race information platform
+              target="_new" href="https://runningdenver.com/">https://runningdenver.com/</a> by adding a race information platform
               including event info, registration and map integration. This included WordPress code and style
               modification as well as incorporating plugins both off-the-self and custom.</p>
             <p id="technology" class="text-muted">PHP, HTML, CSS, WordPress, MySQL</p>
@@ -389,10 +389,10 @@
     <footer class="page-footer">
       <div class="container">
         <div class="social-icons">
-          <a href="https://www.facebook.com/jamesshane"><i class="ion-social-facebook" title="Facebook"></i></a>
-          <a href="https://www.instagram.com/jamesshane"><i class="ion-social-instagram-outline"
+          <a target="_new" href="https://www.facebook.com/jamesshane"><i class="ion-social-facebook" title="Facebook"></i></a>
+          <a target="_new" href="https://www.instagram.com/jamesshane"><i class="ion-social-instagram-outline"
               title="Instagram"></i></a>
-          <a href="https://twitter.com/jamesshane"><i class="ion-social-twitter" title="Twitter"></i></a>
+          <a target="_new" href="https://twitter.com/jamesshane"><i class="ion-social-twitter" title="Twitter"></i></a>
         </div>
       </div>
     </footer>
