--- a/src/mycv/html/indexPDF.html
+++ b/src/mycv/html/indexPDF.html
@@ -8,7 +8,16 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/stylecv.css">
+  <link rel="stylesheet" type="text/css" href="../../../public//css/stylecv.css">
+  <style type="text/css">
+  .hide {
+display: none;
+  }
+  .period {
+    float: left;
+    clear: right;
+  }
+</style>
 </head>
 
 <body>
@@ -72,8 +81,7 @@
               <div class="col-md-6">
                 <h3>Database Administrator - Custom Software Developer</h3>
                 <h4 class="organization">Metropolitan State University of Denver</h4>
-              </div>
-              <div class="col-md-6">
+
                 <time class="period">08/1999 - 06/2003</time>
               </div>
             </div>
@@ -91,8 +99,7 @@
               <div class="col-md-6">
                 <h3>Lead Web/Mobile Developer - Project Manager - Lead Database Administrator</h3>
                 <h4 class="organization">Klein Buendel, Inc.</h4>
-              </div>
-              <div class="col-md-6">
+
                 <time class="period">11/2003 - 11/2018</time>
               </div>
             </div>
@@ -111,8 +118,7 @@
               <div class="col-md-6">
                 <h3>Full Stack Developer</h3>
                 <h4 class="organization">Freelance.</h4>
-              </div>
-              <div class="col-md-6">
+
                 <time class="period">06/2010 - Present</time>
               </div>
             </div>
@@ -129,8 +135,7 @@
               <div class="col-md-6">
                 <h3>WordPress Developer</h3>
                 <h4 class="organization">Acclaro Design</h4>
-              </div>
-              <div class="col-md-6">
+
                 <time class="period">05/2015 - 12/2015</time>
               </div>
             </div>
@@ -145,8 +150,7 @@
               <div class="col-md-6">
                 <h3>Developer</h3>
                 <h4 class="organization">Laradon</h4>
-              </div>
-              <div class="col-md-6">
+
                 <time class="period">06/2010 - 08/2015</time>
               </div>
             </div>
@@ -164,8 +168,7 @@
               <div class="col-md-6">
                 <h3>CTO - Consultant</h3>
                 <h4 class="organization">Borealis Media Group</h4>
-              </div>
-              <div class="col-md-6">
+
                 <time class="period">09/2017 - Present</time>
               </div>
             </div>
@@ -180,8 +183,7 @@
               <div class="col-md-6">
                 <h3>.NET Developer - Full Stack Developer</h3>
                 <h4 class="organization">Soura Tech</h4>
-              </div>
-              <div class="col-md-6">
+
                 <time class="period">11/2018 - Present</time>
               </div>
             </div>
@@ -368,12 +370,8 @@
                 <div class="col-md-4 text-center">
                   <i class="ion-person icon"></i>
                   <span>James Shane</span>
-                </div>
-                <div class="col-md-4 text-center">
                   <i class="ion-ios-telephone icon"></i>
                   <span>+1 303.961-4448</span>
-                </div>
-                <div class="col-md-4 text-center">
                   <i class="ion-at icon"></i>
                   <span>jamesshane@gmail.com</span>
                 </div>
