set up ts  node mongodb, logvisits test

--- a/src/mycv/html/index.html
+++ b/src/mycv/html/index.html
@@ -401,5 +401,6 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="js/script.js"></script>
+<script src="js/classes.js"></script>
 
 </html>
