added final logvisits, styled a little more

--- a/src/mycv/html/index.html
+++ b/src/mycv/html/index.html
@@ -57,7 +57,7 @@
         <div class="avatar">
           <img class="img-fluid rounded-circle" src="img/avatar.jpg">
         </div>
-        <p>Hello! I am <strong>James Shane</strong>. I work as a full stack developer. I have passion for clean, minimal
+        <p>Hello! I am <strong>James Shane</strong>. I work as a full stack developer. I have a passion for clean, minimal
           and easy to use interfaces. Striving for proper database design and integrity.</p>
         <a href="emailform.html" class="btn btn-outline-primary hide" >Hire Me</a>
       </div>
