routed /hireme to emailform.html, pdf regen.

--- a/src/mycv/html/index.html
+++ b/src/mycv/html/index.html
@@ -59,7 +59,7 @@
         </div>
         <p>Hello! I am <strong>James Shane</strong>. I work as a full stack developer. I have a passion for clean, minimal
           and easy to use interfaces. Striving for proper database design and integrity.</p>
-        <a href="emailform.html" class="btn btn-outline-primary hide" >Hire Me</a>
+        <a href="/hireme" class="btn btn-outline-primary hide" >Hire Me</a>
       </div>
     </section>
     <section class="cv-block info">
@@ -383,7 +383,7 @@
 
       </div>
             <div class="cv-block block-end">
-            <a href="emailform.html" class="btn btn-outline-primary hide">Hire Me</a>
+            <a href="/hireme" class="btn btn-outline-primary hide">Hire Me</a>
           </div>
     </section>
     <footer class="page-footer hide">
