--- a/src/mycv/html/indexPDF.html
+++ b/src/mycv/html/indexPDF.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="../../../public//css/stylecv.css">
+  <link rel="stylesheet" type="text/css" href="../../../public/css/stylecv.css">
   <style type="text/css">
   .hide {
 display: none;
@@ -63,10 +63,10 @@ display: none;
   <main class="page cv-page" id="top">
     <section class="cv-block block-intro border-bottom">
       <div class="container">
-        <div class="avatar">
-          <img class="img-fluid rounded-circle" src="img/avatar.jpg">
+        <div class="avatar hide">
+          <img class="img-fluid rounded-circle" src="../../../public/img/avatar.jpg">
         </div>
-        <p>Hello! I am <strong>James Shane</strong>. I work as a full stack developer. I have passion for clean, minimal
+        <p>Hello! I am <strong>James Shane</strong>. I work as a full stack developer. I have a passion for clean, minimal
           and easy to use interfaces. Striving for proper database design and integrity.</p>
         <a href="emailform.html" class="btn btn-outline-primary hide" >Hire Me</a>
       </div>
