--- a/src/mycv/html/index.html
+++ b/src/mycv/html/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>James Shane - CV</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"> 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/stylecv.css">
 </head>
@@ -47,7 +48,8 @@
         </ul>
       </div>
 
-      <a target="_new" href="JamesShaneCV.pdf" class="btn btn-danger download-template" role="button" aria-disabled="true">Download
+      <a target="_new" href="JamesShaneCV.pdf" class="btn btn-danger download-template" role="button" aria-disabled="true">
+        <i class="far fa-file-pdf"></i>Download
         CV</a>
     </div>
   </nav>
@@ -270,7 +272,7 @@
                     <h4 class="organization">Transl Behav Med. 2013 Sep; 3(3): 326–334.</h4>
                   </div>
                   <div class="col-md-6">
-                    <time class="period"><a class="hide" target="_new" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3771005/pdf/13142_2013_Article_208.pdf">Download PDF</a></time>
+                    <time class="period"><a class="hide" target="_new" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3771005/pdf/13142_2013_Article_208.pdf"><i class="far fa-file-pdf"></i>Download</a></time>
                   </div>
                 </div>
                 <p class="text-muted">David B Buller, PhD corresponding author Marianne Berwick, PhD - James Shane, BS - Ilima Kane, MA - Kathleen Lantz, PhD - Mary Klein Buller, MA</p>
@@ -284,7 +286,7 @@
                     <h4 class="organization">Telemed J E Health. 2014 Mar 1; 20(3): 206–214.</h4>
                   </div>
                   <div class="col-md-6">
-                    <time class="period"><a class="hide" target="_new" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3934597/pdf/tmj.2013.0169.pdf">Download PDF</a></time>
+                    <time class="period"><a class="hide" target="_new" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3934597/pdf/tmj.2013.0169.pdf"><i class="far fa-file-pdf"></i>Download</a></time>
                   </div>
                 </div>
                 <p class="text-muted">David B. Buller, PhD - Ron Borland, PhD - Erwin P. Bettinghaus, PhD - James H. Shane, BS - Donald E. Zimmerman, PhD</p>
@@ -298,7 +300,7 @@
                   <h4 class="organization">World views on Evidence-Based Nursing, 2015; 12:1, 31–40.</h4>
                 </div>
                 <div class="col-md-6">
-                  <time class="period"><a class="hide" target="_new" href="https://sigmapubs.onlinelibrary.wiley.com/doi/epdf/10.1111/wvn.12074?purchase_referrer=localhost&tracking_action=preview_click&r3_referer=wol&show_checkout=1">Download PDF</a></time>
+                  <time class="period"><a class="hide" target="_new" href="https://sigmapubs.onlinelibrary.wiley.com/doi/epdf/10.1111/wvn.12074?purchase_referrer=localhost&tracking_action=preview_click&r3_referer=wol&show_checkout=1"><i class="far fa-file-pdf"></i>Download</a></time>
                 </div>
               </div>
               <p class="text-muted">Susan M. Breitenstein, RN, PhD, PMHCNS-BC - James Shane, BS - Wrenetha Julion, RN, PhD - Deborah Gross, RN, DNSc, FAAN</p>
@@ -312,7 +314,7 @@
                     <h4 class="organization">JAMA Dermatol. 2015 May 1; 151(5): 497–504.</h4>
                   </div>
                   <div class="col-md-6">
-                    <time class="period"><a class="hide" target="_new" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4431912/pdf/nihms635227.pdf">Download PDF</a></time>
+                    <time class="period"><a class="hide" target="_new" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4431912/pdf/nihms635227.pdf"><i class="far fa-file-pdf"></i>Download</a></time>
                   </div>
                 </div>
                 <p class="text-muted">David B. Buller, Ph.D. - Marianne Berwick, Ph.D. - Kathy Lantz, Ph.D. - Mary Klein Buller, M.A. - James Shane, B.A. - Ilima Kane, M.A. - Xia Liu, M.A.</p>
@@ -326,7 +328,7 @@
                     <h4 class="organization">JAMA Dermatol. 2015 May 1; 151(5): 505–512.</h4>
                   </div>
                   <div class="col-md-6">
-                    <time class="period"><a class="hide" target="_new" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4431914/pdf/nihms659331.pdf">Download PDF</a></time>
+                    <time class="period"><a class="hide" target="_new" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4431914/pdf/nihms659331.pdf"><i class="far fa-file-pdf"></i>Download</a></time>
                   </div>
                 </div>
                 <p class="text-muted">David B. Buller, Ph.D. - Marianne Berwick, Ph.D. - Kathy Lantz, Ph.D. - Mary Klein Buller, M.A. - James Shane, B.A. - Ilima Kane, M.A. - Xia Liu, M.A.</p>
