added pdf icon to emailform

--- a/public/emailform.html
+++ b/public/emailform.html
@@ -7,6 +7,7 @@
     <title>James Shane - CV</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/stylecv.css">
 </head>
@@ -26,7 +27,7 @@
                     </li>
                 </ul>
             </div>
-            <a target="_new" href="JamesShaneCV.pdf" class="btn btn-danger download-template" role="button" aria-disabled="true">Download
+            <a target="_new" href="JamesShaneCV.pdf" class="btn btn-danger download-template" role="button" aria-disabled="true"><i class="far fa-file-pdf"></i>Download
               CV</a>
         </div>
     </nav>
