edited Soura Tech's paragraph

--- a/public/indexPDF.html
+++ b/public/indexPDF.html
@@ -188,9 +188,7 @@ display: none;
               </div>
             </div>
             <p class="text-muted">Soura Tech works with oil pipeline companies in the Oklahoma region. My first project
-              was developing a website to track errors in pipelines and handle repairs of the pipelines. Currently, I'm
-              working on a general website for a client with a management system for classes dealing with pipeline field
-              education. This website will manage classes and student registration.</p>
+              was developing a custom website application to track assets and tasks. Currently, I'm working on a general website for a client with a management system for classes dealing with pipeline field education. This website will manage classes and student registration.</p>
             <p id="technology" class="text-muted">.NET, MVC, Microsoft SQL Server, C#, Javascript, TypeScript, Nodejs,
               CSS, BootStrap, HTML</p>
           </div>
